--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "chartjs-adapter-moment": "^1.0.1",
     "faker": "^6.6.6",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
